# Stellar-work-

./: PR_DESCRIPTION.md  README.md
.github/workflows/: deploy-preview.yml  deploy-production.yml
contracts/escrow/src/: lib.rs
docs/: DEPLOY.md  README.md  TROUBLESHOOTING.md  environments.md  release-checklist.md
frontend/: .env.example  package.json  vercel.json  vitest.setup.ts
frontend/__tests__/: dashboard-wallet-connect.test.tsx  job-detail-cancel-button.test.tsx  job-detail-loading-state.test.tsx  job-detail-wallet-connect-label.test.tsx  profile-fallback.test.tsx  smoke.test.tsx
frontend/app/: layout.tsx  navigation.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/disputes/: page.tsx
frontend/app/job/[id]/: page.tsx
frontend/app/profile/[address]/: profile-page-client.tsx
frontend/app/transactions/: page.tsx
frontend/components/: JobCardSkeleton.tsx  MilestoneProgress.tsx  NoResultsState.tsx  TransactionRowSkeleton.tsx  WalletSelector.tsx
frontend/lib/: contract.ts  deployment.ts  portfolio.ts  stellar.ts  transactions.ts  types.ts  unified-wallet.ts  wallet-context.tsx
tools/event-replayer/: Cargo.toml  README.md
tools/event-replayer/src/: main.rs
