[package]
name = "event-replayer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "event-replayer"
path = "src/main.rs"

[dependencies]
soroban-sdk = "21.7.7"
soroban-rpc = "21.7.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
